# PythonTutorial

./: .gitignore  README.md  environment.yml  pytest.ini
Jupyter_Tutorial/: README.md  Untitled.ipynb  index.ipynb  plotting.ipynb
Machine_Learning/: README.md  edt_map.py  linear_discriminant_analysis.py
PyQT5/: mainwindow.ui  matplotlib_embeded_qt.py  matplotlib_pyqt.py  pyqtdemo_widgets_in_code.py  pyqtdemo_widgets_in_ui.py
Tutorials/: @_symbol.py  assert_statment.py  built-in_types_functions.py  command_line_argv.py  control-flow_structure.py  date_time.py  decorators.py  exception_handling.py  executable_script.py  file_directory_io_serialization.py  functions.py  json_code.py  lambda.py  logging_code.py  mortgage_calc.py  mutable_vs_immutable.py  numbers_representation_in_memory.py  numpy_arrays.py  pandas_snipets.py  pep8_beautifier_pylint.py  ploting.py  progress_bar_tqdm.py  raise_exception.py  regex.py  set_tuples_list_array_dictionary_collections.py  tips.py  urllib_code.py  vectorization.py  with_statement_contex_manager_contextlib.py  xml_parsing.py  yield_generators.py
calculus/: README.md  automatic_differentiation_forward_mode_dual_number.ipynb  derivatives.ipynb  differentiation.ipynb  taylor's_theorem.ipynb
calculus_linear_algebra/: README.md  derivatives.ipynb  taylor's_theorem.ipynb
calcus_linear_algebra/: taylor's_theorem.ipynb
docs/: argparse.md  (+19 more)
python_tutorials/math_package/: pyproject.toml
python_tutorials/math_package/math_package/: __init__.py  algebra.py  statistics.py
python_tutorials/math_package/tests/: test_module1.py
(+356 files in other folders)
