[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "math_package"
version = "0.1.0"
description = "A simple math package."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.0" 
]

[project.urls]
"Homepage" = "https://your-package-homepage.com"
"Bug Tracker" = "https://your-package-homepage.com/issues"
